--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 Gnome/Assets/_Assets/abandoned-house/source/Abandoned_House/Model/abandoned house 12222.obj
+Gnome/Assets/_Assets/abandoned-house/source/Abandoned_House/Model/abandoned house 12222.obj.meta
